Update index.html and copyright.js

--- a/index.html
+++ b/index.html
@@ -72,14 +72,17 @@
                         <h2 class="accordion-header">What are my current projects?</h2>
                         <div class="accordion-content">
                             <p>I work on fun side projects that solve quirky problems or create amusing applications.</p>
+                            <p>I have a discord bot of my own that im always fixing bugs and adding new features to, as well as the website for said bot https://kaydonbot.xyz/</p>
+                            <p>This site is also one of my active projects :)</p>
                             <p>I'm actively working on a Pokémon search app, an inventory management app, and an online hobby store.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">What are my future goals?</h2>
                         <div class="accordion-content">
-                            <p>🌱 I aim to transition into full-time development to make my ideas accessible to a wider audience.</p>
-                            <p>📚 I plan to expand my skill set by learning C, C++, and C# in the future.</p>
+                            <p>I aim to transition into full-time development to make my ideas accessible to a wider audience.</p>
+                            <p>I would also like to persue my hobby of cybersecurity more and maybe see about future employment in that field</p>
+                            <p>I plan to expand my skill set by learning C, C++, and C# in the future.</p>
                         </div>
                     </div>
                 </div>
