Update index.html: Add line breaks in About Me section and fix link in current projects

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                         <h2 class="accordion-header">What are my current projects?</h2>
                         <div class="accordion-content">
                             <p>I work on fun side projects that solve quirky problems or create amusing applications.</p>
-                            <p>I have a discord bot of my own that im always fixing bugs and adding new features to, as well as the website for said bot https://kaydonbot.xyz/</p>
-                            <p>This site is also one of my active projects :)</p>
                             <p>I'm actively working on a Pokémon search app, an inventory management app, and an online hobby store.</p>
+                            <p>I have a discord bot of my own that im always fixing bugs and adding new features to, as well as the <a href="https://kaydonbot.xyz/">website</a> for said bot </p>
+                            <p>This site is also one of my active projects :)</p>
                         </div>
                     </div>
                     <div class="accordion-item">
