--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
     <div class="width-wrap">
         <main class="main-class">
             <section id="about-me">
-                <h2>About Me</h2>
+                <h2 align="center">About Me</h2>
             </br>
         </br>
-    </br>
-</br>
                 <div class="accordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header">Who am I?</h2>
