--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="width-wrap">
         <main class="main-class">
             <section id="about-me">
-                <h2 align="center">About Me</h2>
+                <h2>About Me</h2>
             </br>
         </br>
                 <div class="accordion">
