--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <div class="width-wrap">
         <main class="main-class">
             <section id="about-me">
-                <h2>About Me</h2>
+                <h3>About Me</h3>
             </br>
+            <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" />
         </br>
                 <div class="accordion">
                     <div class="accordion-item">
