--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <section id="about-me">
                 <h3>About Me</h3>
             </br>
-            <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" />
+            <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" width="300px" height="450px"/>
         </br>
                 <div class="accordion">
                     <div class="accordion-item">
