--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="width-wrap">
         <main class="main-class">
             <section id="about-me">
-                <h3>About Me</h3>
+                <h3>Kayden Cormier, Full-Stack Developer</h3>
             </br>
             <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" width="300px" height="450px"/>
-        </br>
+            </br>
                 <div class="accordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header">Who am I?</h2>
