--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <section id="about-me">
                 <h3>Kayden Cormier, Full-Stack Developer</h3>
             </br>
-                    <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" width="300px" height="450px" style="display: block; margin-left: auto; margin-right: auto;" />
-            </br>
+                <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" width="300px" height="450px"/>
+        </br>
                 <div class="accordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header">Who am I?</h2>
