Update profile picture display and remove job title

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="width-wrap">
         <main class="main-class">
             <section id="about-me">
-                <h3>Kayden Cormier, Full-Stack Developer</h3>
+                <h3>Kayden Cormier</h3>
             </br>
                 <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" width="300px" height="450px"/>
         </br>
@@ -57,7 +57,7 @@
                         <h2 class="accordion-header">Who am I?</h2>
                         <div class="accordion-content">
                             <p>Hi, I'm Kayden Cormier, a passionate software developer, full-stack enthusiast, game designer, and cybersecurity hobbyist.</p>
-                            <p>Currently, I’m in my second year of the Computer Programming program at Sault College.</p>
+                            <p>Currently, I'm in my second year of the Computer Programming program at Sault College.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
