moved files to root directory to avoid future issues

--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,12 @@
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Kayden Cormier -- K-GamesMedia" />
-    <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/accordion.css" />
-    <link rel="stylesheet" href="../styles/normalize.css" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/accordion.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 
 <body class="body-class">
@@ -30,7 +30,7 @@
 
         <div id="mode-toggle-container">
             <button id="mode-toggle">
-                <img id="mode-icon" src="../images/mode.png" alt="Toggle mode">
+                <img id="mode-icon" src="images/mode.png" alt="Toggle mode">
             </button>
         </div>
     </header>
@@ -38,9 +38,9 @@
     <nav class="nav-class">
         <div class="nav-list-div">
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/portfolio.html">My Portfolio</a></li>
-                <li><a href="../pages/about.html">About Me</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/portfolio.html">My Portfolio</a></li>
+                <li><a href="pages/about.html">About Me</a></li>
             </ul>
         </div>
     </nav>
@@ -75,9 +75,9 @@
         </div>
     </footer>
 
-    <script src="../scripts/hamburger.js"></script>
-    <script src="../scripts/darkmode.js"></script>
-    <script src="../scripts/accordion.js"></script>
+    <script src="scripts/hamburger.js"></script>
+    <script src="scripts/darkmode.js"></script>
+    <script src="scripts/accordion.js"></script>
 </body>
 
 </html>
