--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <nav class="nav-class">
         <div class="nav-list-div">
             <ul>
-                <li><a href="pages/contact.html">Contact Me</a></li>
-                <li><a href="pages/portfolio.html">My Portfolio</a></li>
-                <li><a href="pages/about.html">About Me</a></li>
+                <li><a href="/contact.html">Contact Me</a></li>
+                <li><a href="/portfolio.html">My Portfolio</a></li>
+                <li><a href="/about.html">About Me</a></li>
             </ul>
         </div>
     </nav>
