--- a/contact.html
+++ b/contact.html
@@ -75,31 +75,6 @@
 
     <div> 
         <button id="back-to-top" title="Back to top">⇡</button>
-
-        <script>
-            // Get the button
-            let backToTopButton = document.getElementById("back-to-top");
-
-            // When the user scrolls down 20px from the top of the document, show the button
-            window.onscroll = function() {
-                scrollFunction();
-            };
-
-            function scrollFunction() {
-                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                    backToTopButton.style.display = "block";
-                } else {
-                    backToTopButton.style.display = "none";
-                }
-            }
-
-            // When the user clicks on the button, scroll to the top of the document
-            backToTopButton.onclick = function() {
-                document.body.scrollTop = 0;
-                document.documentElement.scrollTop = 0;
-            };
-        </script>
-
     </div>
 
     <footer class="footer-class">
@@ -111,6 +86,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/accordion.js"></script>
+    <script src="scripts/top.js"></script>
 </body>
 
 </html>
