--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
         <div class="nav-list-div">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/portfolio.html">My Portfolio</a></li>
-                <li><a href="pages/about.html">About Me</a></li>
+                <li><a href="portfolio.html">My Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
             </ul>
         </div>
     </nav>
