--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/accordion.js"></script>
+    <script src="scripts/top.js"></script>
 </body>
 
 </html>
