added info to portfolio.html, added github and linkedin

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,13 +55,22 @@
                     <button class="tablinks" onclick="openProject(event, 'Project2')">Personal Webpage</button>
                     <button class="tablinks" onclick="openProject(event, 'Project3')">Discord Bot</button>
                     <button class="tablinks" onclick="openProject(event, 'Project4')">GPT Work</button>
+                    <button class="tablinks" onclick="openProject(event, 'Project5')">K-Games&Collectables</button>
                 </div>
 
                 <div id="Project1" class="tabcontent">
                     <h4>My Projects</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>On this page you will find information about all of the side projects and things ive done as a programmer</p> 
+                    <p>You can navigate the tabs above to see information on each project. Under every project will be a github link to the repo</p>
+                    <br/>
+                    <p>Below is a quick list of my projects:</p> 
+                    <ul>
+                        <li>Personal Webpage -- The website you are currently on. Made to showcase everything ive programmed and pose as my programmers CV</li>
+                        <li>Discord Bot -- kaydonbot is all all-purpose discord bot</li>
+                        <li>Website for Discord Bot -- A website for documentation and information on my discord bot</li>
+                        <li>K-Games&Collectables -- My little collectibles/hobby store & associated apps ive made</li>
+                        <li>GPT Work -- The first bigger project ive done after getting into college and remembering my love for programming, is a few small programs I wrote using OpenAi's API</li>
+                    </ul>
                 </div>
 
                 <div id="Project2" class="tabcontent">
@@ -91,6 +100,14 @@
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 </div>
+
+                <div id="Project5" class="tabcontent">
+                    <h4>K-Games&Collectables</h4>
+                    <img src="https://picsum.photos/300/300" alt="Personal Webpage" class="project-image" width="400px" height="300px"/>
+                    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             </section>
         </main>
     </div>
