Update footer in HTML files

--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,16 @@
     </div>
 
     <footer class="footer-class">
-        <div class="foot">
+        <div class="footer-content">
             <p id="copyright">Copyright © 2024 All rights reserved - Kayden Cormier</p>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/kayden-cormier" target="_blank">
+                    <img src="images/LinkedIn-Logos/LI-In-Bug.png" alt="LinkedIn" width="21px" height="21px">
+                </a>
+                <a href="https://github.com/kaydonbob03" target="_blank">
+                    <img src="images/github-mark/github-mark.svg" alt="GitHub" class="github-icon" width="21px" height="21px">
+                </a>
+            </div>
         </div>
     </footer>
 
