Update portfolio.html and main.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,11 +76,14 @@
                 <div id="Project2" class="tabcontent">
                     <h4>Personal Webpage</h4>
 
-                    <img src="https://picsum.photos/300/200" alt="Personal Webpage" class="project-image" width="300px" height="200px"/>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>The website you are currently on</p> 
+                    <p>I've been coding with html and css since grade 9. My grade 9 computer science class was where I first discovered my passion for programming</p> 
+                    <p></p>
+                    <p id="split">---</p>
+                    <p></p>
+                    <p>I made this website becuase after I wrote a cover letter to apply for a junior web developer postion, I realized, Instead of writing everything i've ever programmed and such, I may as well make a portfolio website to be able to show potential employers and the like</p>
+                    <p>So here we are, my personal webpage. It's still a work in progress, but im proud of how its turning out</p>
+                    <p>Enjoy :)</p>
                 </div>
 
                 <div id="Project3" class="tabcontent">
