Update portfolio.html and main.css: Add information and links for Discord Bot and GitHub repository

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,11 +88,17 @@
 
                 <div id="Project3" class="tabcontent">
                     <h4>Discord Bot</h4>
-                    <img src="https://picsum.photos/310/210" alt="Personal Webpage" class="project-image" width="310px" height="210px"/>
                     
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>The bot, named "Kaydonbot" is an all-purpose discord bot to help with tasks in a discord server.</p>
+                    <p>The bot has moderation commands, dev commands, general commands, as well as some fun little botgames</p>
+                    <p>I have also made a website for documentation for the discord bot, it can be found <a href="https://kaydonbot.xyz/">here</a></p>
+                    <p>On the site (kaydonbot.xyz) you can find a full list of all the commands, as well as an faq. I have plans to add a contact form to the site</p>
+                    <p>The link to the repo for the site can be found <a src="https://github.com/kaydonbot/kaydonbot.github.io">here</a></p>
+                    <p>Below is a link to the github repo for the discord bot</p>
+                    
+                    <a href="https://kaydonbot.xyz/sourcecode" target="_blank">
+                        <img class="github-logo" src="images/GitHub-Logos/GitHub_Logo.png" alt="GitHub Logo" width="100px">
+                    </a>
                 </div>
 
                 <div id="Project4" class="tabcontent">
@@ -142,6 +148,7 @@
     <script src="scripts/accordion.js"></script>
     <script src="scripts/top.js"></script>
     <script src="scripts/tabs.js"></script>
+    <!-- <script src="scripts/github-logo-switch.js"></script> -->
 </body>
 
 </html>
