just some tweaks

--- a/about.html
+++ b/about.html
@@ -57,18 +57,18 @@
                 <p>I have always been fascinated by technology and its potential to solve real-world problems. My journey into software development started at a young age, and over the years, I have honed my skills in various programming languages and tools.</p>
                 
                 <h3>Hobbies and Interests</h3>
-                <p>When I'm not coding, I enjoy:</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <ul>
-                    <li>Playing video games</li>
-                    <li>Exploring new technologies</li>
-                    <li>Reading about cybersecurity</li>
-                    <li>Designing and developing games</li>
+                    <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+                    <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                    <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</li>
+                    <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
                 </ul>
-                <p>Here are some stickers representing my hobbies:</p>
+                <!-- <p>Here are some stickers representing my hobbies:</p>
                 <img src="images/gaming_sticker.png" alt="Gaming" width="100px" height="100px"/>
                 <img src="images/tech_sticker.png" alt="Technology" width="100px" height="100px"/>
                 <img src="images/cybersecurity_sticker.png" alt="Cybersecurity" width="100px" height="100px"/>
-                <img src="images/game_design_sticker.png" alt="Game Design" width="100px" height="100px"/>
+                <img src="images/game_design_sticker.png" alt="Game Design" width="100px" height="100px"/> -->
                 
                 <h3>Skills and Experience</h3>
                 <p>Here are some of the technical skills I've developed:</p>
