more tiny tweaks

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,11 +79,13 @@
                     <p>The website you are currently on</p> 
                     <p>I've been coding with html and css since grade 9. My grade 9 computer science class was where I first discovered my passion for programming</p> 
                     <p></p>
-                    <p id="split">---</p>
+                    <p id="split">~~~</p>
                     <p></p>
                     <p>I made this website becuase after I wrote a cover letter to apply for a junior web developer postion, I realized, Instead of writing everything i've ever programmed and such, I may as well make a portfolio website to be able to show potential employers and the like</p>
                     <p>So here we are, my personal webpage. It's still a work in progress, but im proud of how its turning out</p>
                     <p>Enjoy :)</p>
+                    <br/>
+                    <p>You can find the Git repo for this website <a href="https://github.com/kaydonbob03/kaydonbob03.github.io/">here</a></p>
                 </div>
 
                 <div id="Project3" class="tabcontent">
