cant believe i didnt catch that little mistake before

--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
                     </ul>
 
                     <h5><u>Contact Information</u></h5>
-                    <p>If you have any questions or would like to get in touch, please contact me at <a href="mailto:kayden@kaydencormier.dev">your-email@example.com</a>.</p>
+                    <p>If you have any questions or would like to get in touch, please contact me at <a href="mailto:kayden@kaydencormier.dev">kayden@kaydencormier.dev</a>.</p>
                 </div>
 
                 <div id="Project3" class="tabcontent">
