--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Kayden Cormier - Contact Me</title>
+    <title>Page Not Found - Kayden Cormier</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="msapplication-TileColor" content="#00aba9" />
@@ -25,7 +25,7 @@
             <div></div>
         </button>
         <div class="title-div">
-            <h1>Kayden Cormier - Contact Me</h1>
+            <h1>404 - Page Not Found</h1>
         </div>
 
         <div id="mode-toggle-container">
@@ -40,6 +40,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">My Portfolio</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
                 <li><a href="about.html">About Me</a></li>
             </ul>
         </div>
@@ -47,30 +48,24 @@
 
     <div class="width-wrap">
         <main class="main-class">
-            <section id="contact-me">
-                <h3>Contact Me</h3>
-                <div class="contact-details">
-                    <p>Email: <a href="mailto:kayden@kaydencormier.dev">kayden@kaydencormier.dev</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/kayden-cormier/" target="_blank">Kayden Cormier</a></p>
-                </div>
-                <form class="contact-form" action="https://formspree.io/f/xvgpjozg" method="POST">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-
-                    <button type="submit">Send</button>
-                </form>
+            <section id="not-found">
+                <h3>Oh Nooooooooo! That page could not be found</h3>
+                <p>Sorry, but the page you were looking for does not seem to exist here. Perhaps you made a typo? Or are you a time traveller from the future, where that page exists on this site?</p>
+                <p>Whatever the reason is, the links below may help you find your way! :) </p>
+                <br/>
+                    <a href="index.html">Home</a>
+                    <p></p>
+                    <a href="portfolio.html">My Portfolio</a>
+                    <p></p>
+                    <a href="contact.html">Contact Me</a>
+                    <p></p>
+                    <a href="about.html">About Me</a>
             </section>
         </main>
     </div>
 
     <div id="coffee">
-        <a href="https://www.buymeacoffee.com/kaydonbob03" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
+        <a href="https://www.buymeacoffee.com/kaydonbob03" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;"></a>
     </div>
 
     <div> 
@@ -95,6 +90,7 @@
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/accordion.js"></script>
     <script src="scripts/top.js"></script>
+    <script src="scripts/tabs.js"></script>
 </body>
 
 </html>
