--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="author" content="Kayden Cormier -- K-GamesMedia" />
+    <meta name="author" content="Kayden Cormier" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/accordion.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
