added more information to portfolio as well as updated mobile styles in main.css

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
             </br>
                 <img src="images/kayden.jpg" alt="Kayden Cormier" class="profile-pic" width="300px" height="450px"/>
         </br>
-                <div class="accordion">
+                                <div class="accordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header">Who am I?</h2>
                         <div class="accordion-content">
-                            <p>Hi, I'm Kayden Cormier, a passionate software developer, full-stack enthusiast, game designer, and cybersecurity hobbyist.</p>
-                            <p>Currently, I'm in my second year of the Computer Programming program at Sault College.</p>
+                            <p>Hi, I'm Kayden Cormier, a passionate software developer, full-stack enthusiast, and cybersecurity hobbyist. My journey into the world of technology began in high school, where I discovered my love for coding and problem-solving.</p>
+                            <p>Currently, I'm in my second year of the Computer Programming program at Sault College, where I am honing my skills and expanding my knowledge in various domains of software development.</p>
+                            <p>In my free time, I enjoy exploring new technologies, making changes to and debugging my own code, and making new programs and software from random and fun ideas I get. My diverse interests in technology drive me to continuously learn and innovate.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
@@ -65,27 +66,34 @@
                         <div class="accordion-content">
                             <p>Here are some of the technical skills I've developed:</p>
                             <ul>
-                                <li><strong>Programming Languages:</strong> Python, Java, HTML, CSS</li>
-                                <li><strong>Tools:</strong> Microsoft Office Apps, Adobe (Premiere Pro, Photoshop, InDesign)</li>
-                                <li><strong>Computer Repairs:</strong> BIOS, Hardware, Software</li>
+                                <li><strong>Programming Languages:</strong> Proficient in Python, Java/Kotlin, HTML/CSS, and JavaScript. I have used these languages to develop various applications, including web applications, automation scripts, and some other apps and software to assist me or do fun things.</li>
+                                <li><strong>Tools:</strong> Experienced with Microsoft Office Apps (Word, Excel, Powerpoint, etc...) and Adobe Suite (Premiere Pro, Photoshop, InDesign). I have utilized these tools for project documentation, video editing, graphic design, and creating promotional materials.</li>
+                                <li><strong>Computer Repairs:</strong> Skilled in BIOS configuration, hardware troubleshooting, and software installation. I have successfully repaired and upgraded numerous computers, ensuring optimal performance and reliability.</li>
                             </ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">What are my current projects?</h2>
                         <div class="accordion-content">
-                            <p>I work on fun side projects that solve quirky problems or create amusing applications.</p>
-                            <p>I'm actively working on a Pokémon search app, an inventory management app, and an online hobby store.</p>
-                            <p>I have a discord bot of my own that im always fixing bugs and adding new features to, as well as the <a href="https://kaydonbot.xyz/">website</a> for said bot </p>
-                            <p>This site is also one of my active projects :)</p>
+                            <p>I work on fun side projects that solve quirky problems or create amusing applications. Here are a few of my current projects:</p>
+                            <ul>
+                                <li><strong>Pokémon Search App:</strong> A web application that allows users to search for Pokémon and view detailed information. This project involves using APIs, JavaScript, and responsive design techniques.</li>
+                                <li><strong>Inventory Management App:</strong> A desktop application designed to help me manage inventory for my little hobby store. This project includes features like stock tracking, order management, and reporting.</li>
+                                <li><strong>Online Hobby Store:</strong> An e-commerce platform for hobby enthusiasts to buy items from me. This project involves full-stack development, including front-end design, back-end logic, and database management.</li>
+                                <li><strong>Discord Bot:</strong> A versatile bot for Discord servers that offers moderation, fun commands, and utility features. I am constantly fixing bugs and adding new features to enhance its functionality. You can check out the <a href="https://kaydonbot.xyz/">website</a> for more details.</li>
+                                <li><strong>Personal Website:</strong> This site is also one of my active projects. It serves as my portfolio and a platform to showcase my work and skills.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header">What are my future goals?</h2>
                         <div class="accordion-content">
-                            <p>I aim to transition into full-time development to make my ideas accessible to a wider audience.</p>
-                            <p>I would also like to persue my hobby of cybersecurity more and maybe see about future employment in that field</p>
-                            <p>I plan to expand my skill set by learning C, C++, and C# in the future.</p>
+                            <p>I aim to transition into full-time development to make my ideas accessible to a wider audience. My future goals include:</p>
+                            <ul>
+                                <li>Expanding my knowledge in cybersecurity and exploring potential career opportunities in this field.</li>
+                                <li>Learning new programming languages such as C, C++, and C# to broaden my skill set and enhance my versatility as a developer.</li>
+                                <li>Continuing to develop and improve my personal projects, with the goal of launching them to a broader audience.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
