--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Page Not Found - Kayden Cormier</title>
+    <title>404 Page Not Found - Kayden Cormier</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="msapplication-TileColor" content="#00aba9" />
