--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
 
                 <div id="Project5" class="tabcontent">
                     <h4>K-Games&Collectables</h4>
-                        <img src="images/logo_light_mode.png" alt="K-Games & Collectables" class="project-image" width="200px" height="200px"/>
+                        <img src="images/logo_light_mode.png" alt="K-Games&Collectables logo(if you see this its a bug, try toggle light/dark mode a couple time :P)" class="project-image" width="200px" height="200px"/>
                     
                     <p>This one is a bit tricky. This is my hobby/collectibles small business.</p> 
                     <p>This project includes a bunch of sub-projects of mine.</p> 
