--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,13 @@
                 </div>
                 <form class="contact-form" action="https://formspree.io/f/xvgpjozg" method="POST">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" placeholder="Firstname Lastname" required>
 
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="example@example.com" required>
 
                     <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <textarea id="message" name="message" rows="4" placeholder="Hello, I would like to discuss..." required></textarea>
 
                     <button type="submit">Send</button>
                 </form>
