--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
 
                 <div id="Project5" class="tabcontent">
                     <h4>K-Games&Collectables</h4>
-                        <img src="images/logo_light_mode.png" alt="K-Games&Collectables logo(if you see this its a bug, try toggle light/dark mode a couple time :P)" class="project-image" width="200px" height="200px"/>
+                        <img src="images/logo_light_mode.png" alt="K-Games&Collectables logo(if you see this its a bug, try toggle light/dark mode :P)" class="project-image" width="200px" height="200px"/>
                     
                     <p>This one is a bit tricky. This is my hobby/collectibles small business.</p> 
                     <p>This project includes a bunch of sub-projects of mine.</p> 
@@ -249,7 +249,7 @@
                             </ul>
                         </li>
                         <li><strong>Technologies Used:</strong> Python, PyQT5, SQLite</li>
-                        <li><strong>Future Plans:</strong> Integrating with the online store and API, as well as turn it into a web app with flask so I can run it via a subdomain (inventory.kgamesncollectables.com) so I can have easier access to it from anywhere, and have it save info properly</li>
+                        <li><strong>Future Plans:</strong> Integrating with the online store and API, as well as turn it into a web app with flask or django so I can run it via a subdomain (inventory.kgamesncollectables.com) so I can have easier access to it from anywhere, and have it save info properly</li>
                     </ul>
                 
                     <p id="split">~ ~ ~</p>
