update description for pages in metadata

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Kayden Cormier" />
+    <meta description="Explore Kayden Cormier's portfolio, featuring projects, skills, and future goals." />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/accordion.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
