--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Kayden Cormier" />
+    <meta description="Learn more about Kayden Cormier, a passionate software developer, full-stack enthusiast, and cybersecurity hobbyist." />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/accordion.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
