--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="msapplication-TileColor" content="#00aba9" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="author" content="Kayden Cormier" />
-    <meta description="Developer Portfolio for Kayden Cormier"
+    <meta description="Developer Portfolio for Kayden Cormier"/>
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/accordion.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
